--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
                 <div class="gpt-model-selector" style="display: none;">
                     <select id="gptModelSelect">
                         <optgroup label="GPT-4">
-                            <option value="gpt-4o-2024-05-13">GPT-4 Turbo</option>
-                            <option value="gpt-4o">GPT-4</option>
-                            <option value="gpt-4o-mini-2024-07-18">GPT-4 Mini</option>
+                            <option value="gpt-4o-mini-2024-07-18">GPT-4 Mini (最新)</option>
                             <option value="gpt-4o-mini">GPT-4 Mini</option>
                         </optgroup>
                         <optgroup label="GPT-3.5">
