--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="main-content">
             <div class="top-nav">
                 <div class="model-selector">
-                    <button class="model-btn active" data-model="gpt">GPT</button>
-                    <button class="model-btn" data-model="zhipu">智谱AI</button>
+                    <button class="model-btn" data-model="gpt">GPT</button>
+                    <button class="model-btn active" data-model="zhipu">智谱AI</button>
                 </div>
                 <div class="gpt-model-selector" style="display: none;">
                     <select id="gptModelSelect">
