--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <button class="model-btn" data-model="qwen">Qwen</button>
                     <button class="model-btn" data-model="flux">FLUX</button>
                     <button class="model-btn" data-model="sd">Stable Diffusion</button>
-                    <button class="model-btn" data-model="video">LTX-Video</button>
+                    <button class="model-btn" data-model="video">CogVideoX</button>
                 </div>
                 <div class="gpt-model-selector" style="display: none;">
                     <select id="gptModelSelect">
@@ -59,7 +59,7 @@
                 </div>
                 <div class="zhipu-model-selector" style="display: none;">
                     <select id="zhipuModelSelect">
-                        <option value="glm-4v">GLM-4V</option>
+                        <option value="glm-4v-flash">glm-4v-flash</option>
                         <option value="THUDM/glm-4-9b-chat">GLM-4-9B-Chat</option>
                     </select>
                 </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="video-model-selector" style="display: none;">
                     <select id="videoModelSelect">
-                        <option value="Lightricks/LTX-Video">LTX-Video</option>
+                        <option value="cogvideox">CogVideoX</option>
                     </select>
                 </div>
             </div>
