--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <button class="model-btn" data-model="flux">FLUX</button>
                     <button class="model-btn" data-model="sd">Stable Diffusion</button>
                     <button class="model-btn" data-model="video">CogVideoX</button>
+                    <button class="model-btn" data-model="deepseek">DeepSeek</button>
                 </div>
                 <div class="gpt-model-selector" style="display: none;">
                     <select id="gptModelSelect">
@@ -94,6 +95,11 @@
                 <div class="video-model-selector" style="display: none;">
                     <select id="videoModelSelect">
                         <option value="cogvideox">CogVideoX</option>
+                    </select>
+                </div>
+                <div class="deepseek-model-selector" style="display: none;">
+                    <select id="deepseekModelSelect">
+                        <option value="deepseek">DeepSeek Chat</option>
                     </select>
                 </div>
             </div>
